tests/snapshots/assets__check_file@tests-assets-typstfmt-102-non-converge-math-mat.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/typstfmt/102-non-converge-math-mat.typ
---
$mat(
    (
      11111111111111111111111111111111111111111111111111111111111111111111111111,
    ),
  )$
