tests/snapshots/assets__check_file@tests-assets-typstfmt-124-block-comment.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/typstfmt/124-block-comment.typ
---
 #let test(
  ..args,
) = (
   // do something
 )

#test(
  a: "test test test test test",
  b: "test test test test test",
)[ /* test */
  test test test test test test test test test test test test test test test test test test test test test test test test
][ /* test */
  test test test test test test test test test test test test test test test test test test test test test test test test
][ /* test */
  test test test test test test test test test test test test test test test test test test test test test test test test
]
