tests/snapshots/assets__check_file@tests-assets-typstfmt-138-non-converge-block-comment.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/typstfmt/138-non-converge-block-comment.typ
---
#let test_func() = {
  ()
}
