tests/snapshots/assets__check_file@tests-assets-typstfmt-139-block-comment.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/typstfmt/139-block-comment.typ
---
#let test_func() = {
  /*
  test
  */
}
