tests/snapshots/assets__check_file@tests-assets-typstfmt-148-broken-input.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/typstfmt/148-broken-input.typ
---
#cite
